--- a/Skin_Diseases_Using_Resnet101.ipynb
+++ b/Skin_Diseases_Using_Resnet101.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN7ymGIsI5h/S5UWDlGy/jb",
+      "authorship_tag": "ABX9TyMaYGPZBPDc2pXJkn/4KerW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "oM-yTzuJoUZ0"
       },
@@ -53,7 +53,7 @@
         "id": "mcVl5R2Boo0Z",
         "outputId": "5f35e346-1ee1-44ba-d0b0-09ee0f230f22"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
         },
         "outputId": "05689dce-ecdd-4e9e-ed8e-04fde132c17b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3618,7 +3618,7 @@
       "metadata": {
         "id": "7nY3N6QGpsvx"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3630,7 +3630,7 @@
       "metadata": {
         "id": "mn_0LyBmqUpx"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3642,7 +3642,7 @@
       "metadata": {
         "id": "XB_LU24GrY6h"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3660,7 +3660,7 @@
         "id": "2w8Ldf8yrh4Z",
         "outputId": "cc5b331e-0077-4d04-a327-2b00f13832ba"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3680,7 +3680,7 @@
       "metadata": {
         "id": "BwV-AQH-s_U5"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3692,13 +3692,13 @@
       "metadata": {
         "id": "KZUCi2fntbnA"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "x = GlobalAvgPool2D()(denseNet.output)\n",
+        "x = Flatten()(denseNet.output)\n",
         "\n",
         "x = Dense(units = 128, activation = 'relu')(x)\n",
         "x = Dense(units = outputsize, activation = 'softmax')(x)"
@@ -3706,7 +3706,7 @@
       "metadata": {
         "id": "HmCKJLBytoKB"
       },
-      "execution_count": 47,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -3720,15 +3720,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G5WgNsO9uCe5",
-        "outputId": "41b337f1-99ad-4c99-b619-82b268a3088c"
+        "outputId": "5077f321-9ea7-4ac5-9206-c60708fac0ea"
       },
-      "execution_count": 48,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"model_3\"\n",
+            "Model: \"model_4\"\n",
             "__________________________________________________________________________________________________\n",
             " Layer (type)                Output Shape                 Param #   Connected to                  \n",
             "==================================================================================================\n",
@@ -5841,17 +5841,16 @@
             "                                                                                                  \n",
             " relu (Activation)           (None, 7, 7, 1920)           0         ['bn[0][0]']                  \n",
             "                                                                                                  \n",
-            " global_average_pooling2d (  (None, 1920)                 0         ['relu[0][0]']                \n",
-            " GlobalAveragePooling2D)                                                                          \n",
+            " flatten_1 (Flatten)         (None, 94080)                0         ['relu[0][0]']                \n",
             "                                                                                                  \n",
-            " dense_2 (Dense)             (None, 128)                  245888    ['global_average_pooling2d[0][\n",
-            "                                                                    0]']                          \n",
+            " dense_4 (Dense)             (None, 128)                  1204236   ['flatten_1[0][0]']           \n",
+            "                                                          8                                       \n",
             "                                                                                                  \n",
-            " dense_3 (Dense)             (None, 19)                   2451      ['dense_2[0][0]']             \n",
+            " dense_5 (Dense)             (None, 19)                   2451      ['dense_4[0][0]']             \n",
             "                                                                                                  \n",
             "==================================================================================================\n",
-            "Total params: 18570323 (70.84 MB)\n",
-            "Trainable params: 18341267 (69.97 MB)\n",
+            "Total params: 30366803 (115.84 MB)\n",
+            "Trainable params: 30137747 (114.97 MB)\n",
             "Non-trainable params: 229056 (894.75 KB)\n",
             "__________________________________________________________________________________________________\n"
           ]
@@ -5866,7 +5865,7 @@
       "metadata": {
         "id": "H2-Pl3tPuVWC"
       },
-      "execution_count": 49,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -5877,7 +5876,7 @@
       "metadata": {
         "id": "HHUHWOKxuidx"
       },
-      "execution_count": 50,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -5898,7 +5897,7 @@
       "metadata": {
         "id": "RIB2-guvvAbm"
       },
-      "execution_count": 51,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -5921,9 +5920,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vxIj0W5413-U",
-        "outputId": "afc0dcef-3577-47a0-9ff8-982215ac21b8"
+        "outputId": "f6710b7c-df7a-45bf-99cd-b41e150aa80a"
       },
-      "execution_count": 52,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -5947,9 +5946,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RCSXEJ7Xn0d9",
-        "outputId": "dd9e104a-20d8-4e18-fa2e-c9540551d74d"
+        "outputId": "49865e6c-e456-45a7-da0b-ab2063ed8f27"
       },
-      "execution_count": 53,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5977,7 +5976,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 64
         }
       ]
     },
@@ -5996,9 +5995,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3GRHmBDXodk0",
-        "outputId": "7bf34cac-8ce7-4ed0-87a4-25b258df6fe0"
+        "outputId": "d31e62d3-7a50-4f8f-f7af-5a993c00d760"
       },
-      "execution_count": 54,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -6035,7 +6034,7 @@
       "metadata": {
         "id": "tRldugbNo1zP"
       },
-      "execution_count": 55,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -6043,7 +6042,7 @@
       "source": [
         "model_history = model.fit_generator(\n",
         "    traindf,\n",
-        "    epochs = 5,\n",
+        "    epochs = 50,\n",
         "    verbose = 1,\n",
         "    validation_data = testdf,\n",
         "    steps_per_epoch = stepsPertrainingEpoch,\n",
@@ -6056,7 +6055,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ciLxypw2Dhc",
-        "outputId": "8a7d73e5-8af5-40fa-d078-7889e07822e5"
+        "outputId": "880afa12-3786-4fa0-e903-8b8ad7a73278"
       },
       "execution_count": null,
       "outputs": [
@@ -6064,7 +6063,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/5\n"
+            "Epoch 1/50\n"
           ]
         }
       ]
